commit przed zadaniem

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>JS Przyklady</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>    
-    
+<body>
+   <!-- skrypty dodaje się na dole dokumentu -->    
+    <script src="js/14-json.js"></script>
 </body>
 
 </html>
